[package]
name = "pg-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.58"
futures-util = "0.3.25"
http-problem = { version = "0.2.1", features = ["tokio-postgres"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = "0.7.7"
